# sepm-group

./: .gitignore  CMakeLists.txt  FileWatcher.cpp  FileWatcher.h  NotifyPipe.cpp  NotifyPipe.h  README.md  ca.crt  run_server.sh  run_sever.sh  run_tests.sh  server.crt  server.key  update_dash.sh  watch_logs.sh
client/: CMakeLists.txt  ChatInstance.cpp  ChatInstance.h  ChatManager.cpp  ChatManager.h  client.cpp
cmake/: cppcheck_amd64  cppcheck_x86  lint.py
cmake/Modules/: Findbfd.cmake
common/: CMakeLists.txt  DBPool.cpp  DBPool.h  ExitHandler.h  FileWatcher.cpp  FileWatcher.h  Logging.cpp  Logging.h  Plugin.h  PluginManager.cpp  PluginManager.h  ThreadHook.h  ViewRefresher.cpp  ViewRefresher.h  backward.hpp  config.cpp  config.h  defines.h  plugin.h
dashboard/: Gemfile  config.ru  githook.py
dashboard/assets/stylesheets/: application.scss
dashboard/dashboards/: dash.erb
dashboard/jobs/: build_status.rb  commits.rb  cppcheck.rb  jenkins_build.rb  log.rb  tests.rb  todos.rb
dashboard/widgets/jenkins_build/: jenkins_build.coffee  jenkins_build.html  jenkins_build.scss
dashboard/widgets/log/: log.coffee  log.html  log.scss
dashboard/widgets/multigraph/: multigraph.coffee  multigraph.scss
dashboard/widgets/status/: status.scss
dependencies/: CMakeLists.txt
dependencies/gmock/: CMakeLists.txt
dependencies/gtest/: CMakeLists.txt
dependencies/ow-crypt/: CMakeLists.txt
dependencies/soci/: CMakeLists.txt
dependencies/zmq/: CMakeLists.txt
dependencies/zmqpp/: CMakeLists.txt  exception.hpp  socket_options.hpp  zmqpp.cpp  zmqpp.hpp
doxygen/: Doxyfile.in
ice/: CMakeLists.txt  SecureDistributedChat.ice
plugins/: CMakeLists.txt
plugins/hello_world/: CMakeLists.txt  hello.cpp
server/: AuthenticationImpl.cpp  AuthenticationImpl.h  CMakeLists.txt  Chat.cpp  Chat.h  ChatClientCallbackInd.h  ChatClientCallbackWrapper.h  ChatManager.cpp  ChatManager.h  DBPool.cpp  DBPool.h  IceServer.cpp  IceServer.h  IceServerI.h  InterServerImpl.cpp  InterServerImpl.h  InterServerManager.cpp  InterServerManager.h  PwdHash.cpp  PwdHash.h  SessionImpl.cpp  SessionImpl.h  SessionManager.cpp  SessionManager.h  backward.cpp  server.cpp
tests/: CMakeLists.txt  basic_tests.cpp  more_tests.cpp
tests/client/: CMakeLists.txt  basic_tests.cpp
tests/common/: CMakeLists.txt  basic_tests.cpp  logging.cpp  more_tests.cpp  notify_pipe.cpp
tests/include/: IceMocks.h
tests/plugins/: CMakeLists.txt
tests/plugins/hello_world/: CMakeLists.txt  plugin_test.cpp
tests/server/: CMakeLists.txt  authentication.cpp  basic_tests.cpp  session.cpp
ui/: ChatMainWindow.ui  ChatMessageWindow.ui  ChatSettingsWindow.ui  ChatStatusWindow.ui  ChatWelcomeWindow.ui  LineEdit.qml  LineEditClear.qml  LineInput.qml  ui.qml
zchat/: CMakeLists.txt  ChatDB.cpp  ChatDB.h  IceClient.h  IceServer.cpp  IceServer.h  InterServerImpl.cpp  InterServerImpl.h  InterServerProxyWrapper.h  MessageReader.cpp  MessageReader.h  MessageRouter.cpp  MessageRouter.h  SocketHandler.cpp  SocketHandler.h  ThreadHook.h  zchat.cpp
